--- a/Weather1/Base.lproj/Main.storyboard
+++ b/Weather1/Base.lproj/Main.storyboard
@@ -1,10 +1,99 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="S0V-6c-lab">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Location-->
+        <scene sceneID="sM3-sj-A4D">
+            <objects>
+                <viewController id="xw7-PV-68S" customClass="LocationViewController" customModule="Weather1" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="s6G-ak-Vwx"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zyv-6U-zCc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3K6-ly-YLg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lattitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRU-Hg-L5Z">
+                                <rect key="frame" x="154" y="110" width="69" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="69" id="fel-aw-nWR"/>
+                                    <constraint firstAttribute="height" constant="21" id="ieC-mv-1u1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Longitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWq-rl-Xwm">
+                                <rect key="frame" x="154" y="182" width="77" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="eVb-ib-sqY"/>
+                                    <constraint firstAttribute="width" constant="77" id="w3U-Kf-mLt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6qu-Qh-qwT">
+                                <rect key="frame" x="276" y="106" width="171" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DaK-mu-1g0"/>
+                                    <constraint firstAttribute="width" constant="171" id="fIu-Nu-YWY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ihN-rJ-Lqy">
+                                <rect key="frame" x="276" y="178" width="171" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="171" id="P9e-SI-89d"/>
+                                    <constraint firstAttribute="height" constant="30" id="wxK-aB-u6s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Upm-Nv-jCd">
+                                <rect key="frame" x="276" y="312" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="Xf4-va-FBc"/>
+                                    <constraint firstAttribute="height" constant="30" id="ja0-Y7-yZ2"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="summitLatAndLong:" destination="xw7-PV-68S" eventType="touchUpInside" id="ROJ-om-zSM"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="showWeather" id="shv-am-Nc0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EWq-rl-Xwm" firstAttribute="centerX" secondItem="3K6-ly-YLg" secondAttribute="centerX" constant="-107.5" id="FIp-QM-gla"/>
+                            <constraint firstItem="ihN-rJ-Lqy" firstAttribute="centerY" secondItem="3K6-ly-YLg" secondAttribute="centerY" constant="-107" id="Kjz-ot-Hb5"/>
+                            <constraint firstItem="EWq-rl-Xwm" firstAttribute="centerY" secondItem="3K6-ly-YLg" secondAttribute="centerY" constant="-107.5" id="NWP-V0-36v"/>
+                            <constraint firstItem="Upm-Nv-jCd" firstAttribute="centerX" secondItem="3K6-ly-YLg" secondAttribute="centerX" constant="-1" id="QrR-sV-e62"/>
+                            <constraint firstItem="6qu-Qh-qwT" firstAttribute="centerX" secondItem="3K6-ly-YLg" secondAttribute="centerX" constant="61.5" id="Rkv-H9-pC1"/>
+                            <constraint firstItem="YRU-Hg-L5Z" firstAttribute="centerY" secondItem="3K6-ly-YLg" secondAttribute="centerY" constant="-179.5" id="Zhb-ry-aev"/>
+                            <constraint firstItem="ihN-rJ-Lqy" firstAttribute="centerX" secondItem="3K6-ly-YLg" secondAttribute="centerX" constant="61.5" id="hYZ-if-WRY"/>
+                            <constraint firstItem="6qu-Qh-qwT" firstAttribute="centerY" secondItem="3K6-ly-YLg" secondAttribute="centerY" constant="-179" id="q28-v0-SjI"/>
+                            <constraint firstItem="YRU-Hg-L5Z" firstAttribute="centerX" secondItem="3K6-ly-YLg" secondAttribute="centerX" constant="-111.5" id="rPN-DG-0pm"/>
+                            <constraint firstItem="Upm-Nv-jCd" firstAttribute="centerY" secondItem="3K6-ly-YLg" secondAttribute="centerY" constant="27" id="zHo-TA-fdZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Location" id="Lo7-Kn-8hQ"/>
+                    <connections>
+                        <outlet property="latitudeTextField" destination="6qu-Qh-qwT" id="JTH-K9-iqZ"/>
+                        <outlet property="longitudeTextField" destination="ihN-rJ-Lqy" id="g99-98-aLa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CI6-8Q-0FV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="384" y="373"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,15 +106,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnr-Ll-eqa">
-                                <rect key="frame" x="268" y="20" width="65" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnr-Ll-eqa">
+                                <rect key="frame" x="263" y="72" width="74" height="49"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wWV-5J-ePB">
-                                <rect key="frame" x="20" y="49" width="560" height="502"/>
+                                <rect key="frame" x="24" y="120" width="552" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="552" id="BKL-XF-ZW1"/>
+                                    <constraint firstAttribute="height" constant="460" id="TjQ-JP-ffX"/>
+                                    <constraint firstAttribute="width" secondItem="wWV-5J-ePB" secondAttribute="height" multiplier="6:5" id="pD7-3f-i9s"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -33,12 +127,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wWV-5J-ePB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="1ep-PQ-PPm"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wWV-5J-ePB" secondAttribute="bottom" constant="49" id="CqD-EP-5G2"/>
-                            <constraint firstItem="wWV-5J-ePB" firstAttribute="top" secondItem="nnr-Ll-eqa" secondAttribute="bottom" constant="8" id="Fga-14-KSs"/>
-                            <constraint firstItem="nnr-Ll-eqa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Idx-6x-p9y"/>
+                            <constraint firstItem="wWV-5J-ePB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="Cp8-3L-9SV"/>
+                            <constraint firstItem="nnr-Ll-eqa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Idx-6x-p9y"/>
                             <constraint firstItem="nnr-Ll-eqa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OLd-j6-KmX"/>
-                            <constraint firstAttribute="trailing" secondItem="wWV-5J-ePB" secondAttribute="trailing" constant="20" id="gGX-um-bNT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wWV-5J-ePB" secondAttribute="trailing" constant="4" id="RoL-Nd-Co9"/>
+                            <constraint firstItem="wWV-5J-ePB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="56" id="pDM-gj-ggy"/>
                         </constraints>
                     </view>
                     <connections>
@@ -47,7 +140,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="293" y="389"/>
+            <point key="canvasLocation" x="1106" y="373"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rHo-L6-cvi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="S0V-6c-lab" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PlQ-1B-n3z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xw7-PV-68S" kind="relationship" relationship="rootViewController" id="cEs-e3-4Bl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FzF-R6-FYH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-428" y="373"/>
         </scene>
     </scenes>
 </document>
